# astray

./: .envrc  .gitignore  Cargo.toml  LICENSE  README.md  build.rs
.config/: config.json5
.github/workflows/: cd.yml  ci.yml
assets/: research.json5  research_fields.json5
assets/namelists/: star_namelist.txt
assets/ship_modules/: sublight_engines.json5
docs/: buildings.md  resources.md  ship_modules.md
src/: action.rs  app.rs  cli.rs  components.rs  config.rs  consts.rs  main.rs  mode.rs  tabs.rs  utils.rs
src/components/: colonies_menu.rs  fps.rs  general.rs  mod.rs  planet.rs  planets_menu.rs  research_menu.rs  ship_module_designer.rs  star.rs  system_menu.rs  system_tree.rs  top_menu.rs  utils.rs
src/game/: celestial_bodies.rs  game_state.rs  helpers.rs  mod.rs  research.rs
src/game/celestial_bodies/: planet.rs  solar_system.rs  star.rs
src/game/colony/: building.rs  building_manager.rs  colony.rs  construction_process.rs  mod.rs
src/game/research/: mod.rs  research.rs  research_manager.rs
src/game/resource/: mod.rs  resource.rs  resource_manager.rs
src/game/shipbuilding/: mod.rs  module_trait.rs  ship_module.rs  ship_module_manager.rs  sublight_engine.rs
src/systems/: body_list_system.rs  keyboard_input_system.rs  mod.rs  orbit_update_system.rs  system_display_system.rs  system_generator_system.rs  tab_system.rs  ui_system.rs
src/ui/: mod.rs  tab_menu.rs
src/ui/system/: body_list.rs  mod.rs  system_display.rs
