[package]
name = "astray"
version = "0.1.0"
edition = "2021"
description = "A TUI-based replica of Aurora 4X"
repository = "https://github.com/Vinermy/astray"
authors = ["Vinermy <egorkosachev@vk.com>"]
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = { version = "0.8.5", features = ["alloc"] }
bevy = "0.14"
bevy_ratatui = "0.6"
color-eyre = "0.6.3"
ratatui = "0.27.0"
rand_distr = "0.4.3"
once_cell = "1.19.0"
